--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "ssh2": "^1.6.0"
   }
 }
